--- a/myindex.j2
+++ b/myindex.j2
@@ -1,1 +1,3 @@
 <h1> this is my index page </h1>
+<h1>my ansible node os is :{{ ansible-os-family }} </h1>
+<h1> my ansible node ip is: {{ansible_all_ipv4_address}} </h1>
